# poolsystem

./: LICENSE  README.md  pyproject.toml
.harness/: Build_Ngel_Castro_poolsystem_1702058675879-pr-trigger-input-set-1702058676976.yaml  Build_Ngel_Castro_poolsystem_1702058675879-push-trigger-input-set-1702058678195.yaml
.harness/pipelines/: poolsystem-1702058672074.yaml
poolsystem/src/: dependencies.py  main.py
poolsystem/src/routers/: pool.py  pool_readings.py
src/: app.py
