[tool.poetry]
name = "poolsystem"
version = "0.1.0"
description = "Local project to keep log of pool Ph data."
authors = ["Angel Castro <castrobasurto.angel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.4.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
